--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <div class="background-container">
@@ -63,6 +63,6 @@
       <main id="profile-card" class="profile-card"></main>
     </div>
 
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="../js/main.js"></script>
   </body>
 </html>
